--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ hr {
       --clr-card-bg: hsl(0, 0%, 100%);
       --clr-text-question: hsl(292, 42%, 14%);
       --clr-text-question-active: hsl(275, 100%, 97%);
+      --clr-text-question-hover: hsl(276, 100%, 65%);
       --clr-text-answer: hsl(292, 16%, 49%);
 
       --fw-regular: 400;
@@ -134,4 +135,12 @@ body {
       }
 
       
+}
+
+.question {
+      cursor: pointer;
+}
+
+.question:hover p{
+      color: var(--clr-text-question-hover);
 }
